# card_printer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  replace_string.sh
contents/: atlases.json  cards.json  cards_atlas.json  cards_data.csv  cards_data.json  editor_layout.json  english_card_texts.json  english_editor_texts.json  filepath.json  model.json  widgets_atlas.json
src/: CMakeLists.txt  IntroScene.h  MainMenuScene.h  chrono.h  log.cpp  log.h  main.cpp
src/GUI/: CMakeLists.txt  groupProperties.cpp  groupProperties.h  gui.cpp  gui.h  gui.tpp  guiLayout.cpp  guiLayout.h  guiLayout.tpp  guiLayoutTypes.h  guiStyle.cpp  guiStyle.h  widget.h
src/cards/: CMakeLists.txt  CardUtils.cpp  CardUtils.h  CardsSerialization.cpp  CardsSerialization.h  DeckFunctions.cpp  DeckFunctions.h  DisplayFunctions.cpp  DisplayFunctions.h  GraphicalParts.h  Informations.h  PaperFormats.h
src/container/: CMakeLists.txt  lookupTable.h  lookupTable.tpp  objectPool.h  objectPool.tpp
src/math/: CMakeLists.txt  interpolation.h  interpolation.tpp  math.h  math.tpp  polygonGraph.h  polygonGraph.tpp  shapes.h  shapes.tpp
src/render/: CMakeLists.txt  UIRender.cpp  UIRender.h  UIRender.tpp  UVMesh.cpp  UVMesh.h  plotter.cpp  plotter.h  primitiveShapeRender.cpp  primitiveShapeRender.h  primitiveShapeRender.tpp  renderUtils.cpp  renderUtils.h  renderer.cpp  renderer.h
src/resources/: CMakeLists.txt  ResourceHolder.h  ResourceHolder.tpp  TextureCollage.cpp  TextureCollage.h  loadGuiLayout.cpp  loadGuiLayout.h  loadLookupTable.h  loadLookupTable.tpp  loadTextureAtlas.cpp  loadTextureAtlas.h  resourceHolder.h  textContainer.cpp  textContainer.h  textureAtlas.cpp  textureAtlas.h
src/scenes/: Application.cpp  Application.h  CMakeLists.txt  CardEditor.cpp  CardEditorScene.cpp  CardEditorScene.h  CardPrinter.cpp  CardPrinter.h  CardPrinterScene.cpp  CardPrinterScene.h  CommonData.h  IntroScene.cpp  ProjectSelection.cpp  ProjectSelection.h  introScene.h
src/serialization/: CMakeLists.txt  CardLoading.cpp  CardLoading.h  CardSaving.h  FromCSVToJson.cpp  FromCSVToJson.h  loadJson.cpp  loadJson.h  serializeContainer.h  serializeGUI.cpp  serializeGUI.h  serializeSFML.cpp  serializeSFML.h
